Fix extra padding in ConversationHeader

--- a/stylesheets/components/ConversationHeader.scss
+++ b/stylesheets/components/ConversationHeader.scss
@@ -55,12 +55,11 @@
     width: 24px;
     height: 24px;
     min-width: 24px;
-    margin-left: 12px;
-    transform: translateX(-36px);
+    margin-left: -24px;
     vertical-align: text-bottom;
     border: none;
     opacity: 0;
-    transition: transform $transition, opacity $transition;
+    transition: margin-left $transition, opacity $transition;
 
     &:disabled {
       cursor: default;
@@ -69,7 +68,7 @@
     &--show {
       opacity: 1;
       margin-right: 6px;
-      transform: translateX(0px);
+      margin-left: 12px;
     }
 
     @include light-theme {
